log
Tue, Mar 25, 2025 11:09:58 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Tue, Mar 25, 2025 11:16:11 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
51ff100
Tue, Mar 25, 2025 11:16:48 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
a5dd9f3
Tue, Mar 25, 2025 11:17:22 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
07111c5
Tue, Mar 25, 2025 11:17:41 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
3e36c29
Tue, Mar 25, 2025 11:18:03 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
eba0c21
Tue, Mar 25, 2025 11:18:22 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b2430ca
Tue, Mar 25, 2025 11:21:15 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
646768c
Tue, Mar 25, 2025 11:22:50 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
dbf19bc
Tue, Mar 25, 2025 11:25:14 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
adbefab
Tue, Mar 25, 2025 11:31:38 PM: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
7d065dc
Tue, Mar 25, 2025 11:35:18 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|4
total_score: 25/70
0a84741
Tue, Mar 25, 2025 11:36:51 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6417b23
Tue, Mar 25, 2025 11:38:37 PM: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
536ed0d
Tue, Mar 25, 2025 11:42:35 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
3f2d620
Tue, Mar 25, 2025 11:45:38 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
f9df566
Tue, Mar 25, 2025 11:47:36 PM: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
e282e1e
Tue, Mar 25, 2025 11:49:24 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:69:46: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   69 |     if(list->head == NULL) return list->head = newNode;
      |                                   ~~~~~~~~~~~^~~~~~~~~
list.c:67:6: note: declared here
   67 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
Compilation failed
66512fb
Tue, Mar 25, 2025 11:51:36 PM: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
cf3d352
